@@ -32,5 +32,6 @@
  <printers>
   <printer><id>printer/Casio-KP-C10</id></printer>
   <printer><id>printer/Casio-KL-P1000</id></printer>
+  <printer><id>printer/Casio-KL-E11</id></printer>
  </printers>
 </driver>
