@@ -1,0 +1,25 @@
+<printer id="printer/Casio-KL-E11">
+  <make>Casio</make>
+  <model>KL-E11</model>
+  <mechanism>
+    <consumables>
+      <comments>
+        <en>Special thermal labels</en>
+      </comments>
+    </consumables>
+  </mechanism>
+  <url>http://www.casio.com/index.cfm?fuseaction=products.attributes&amp;catalog=Label%20Printers&amp;section=&amp;product=KL-E11</url>
+  <lang>
+    <proprietary/>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>pegg</driver>
+  <verified/>
+  <comments>
+    <en>
+      Thermal label printer.  Prints a 512x64 bitmap on roll labels.
+    </en>
+  </comments>
+</printer>
