@@ -1,5 +1,7 @@
 2004-07-09  Grant Taylor  <gtaylor@linuxprinting.org>
 
+	* Add all known working Casio label printers (just three total)
+
 	* Add new "pegg" driver for some Casio label printers, and a few
 	  representative printers.  Still need to figure out execution
 	  data, if possible.
